replacing .Call calls

--- a/vignettes/RcppEigen-Introduction.Rnw
+++ b/vignettes/RcppEigen-Introduction.Rnw
@@ -10,7 +10,7 @@ pkgVersion <- packageDescription("RcppEigen")$Version
 pkgDate <- packageDescription("RcppEigen")$Date
 prettyDate <- format(Sys.Date(), "%B %e, %Y")
 #require("RcppEigen")
-#eigenVersion <- paste(unlist(.Call("eigen_version", FALSE)), collapse=".")
+#eigenVersion <- paste(unlist(RcppEigen:::eigen_version(FALSE)), collapse=".")
 @
 
 \author{Douglas Bates\\University of Wisconsin-Madison \And Dirk Eddelbuettel\\Debian Project}
