--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-12-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* debian/*: Added after emails with Doug
+
+	* .Rbuildignore: Added debian/
+
 2013-11-13  Douglas Bates  <bates@stat.wisc.edu>
 
 	* DESCRIPTION: New version, release date and dependencies
