--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2013-12-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: Minor version 3.2.0.1, new maintainer
+
+	* inst/include/Eigen/src/SparseLU/SparseLU.h: Applied Solaris patch
+	* inst/include/unsupported/Eigen/src/SparseExtra/MatrixMarketIterator.h:
+	  Idem
+	* inst/include/RcppEigenForward.h: Idem
+
+	* inst/COPYRIGHTS: Added, based on existing debian/copyright file
+	* DESCRIPTION: Added Copyright: reference to new COPYRIGHTS file
+
 2013-12-04  Dirk Eddelbuettel  <edd@debian.org>
 
 	* debian/*: Added after emails with Doug
