next attempt at RcppEigen 0.3.2.0.1 release

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
-2013-12-16  Dirk Eddelbuettel  <edd@debian.org>
+2013-12-18  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION: Minor version 3.2.0.1, new maintainer
+
+	* DESCRIPTION: Minor version 3.2.0.1
+	* DESCRIPTION: New maintainer
+	* DESCRIPTION: Added Copyright: reference to new COPYRIGHTS file
+	* DESCRIPTION: Added reference to new LICENSE file
+
+	* inst/COPYRIGHTS: Added, based on existing debian/copyright file
+	* inst/LICENSE: Added, states MPL-2 for Eigen,GPL (>=2) for RcppEigen
 
 	* inst/include/Eigen/src/SparseLU/SparseLU.h: Applied Solaris patch
 	* inst/include/unsupported/Eigen/src/SparseExtra/MatrixMarketIterator.h:
 	  Idem
 	* inst/include/RcppEigenForward.h: Idem
-
-	* inst/COPYRIGHTS: Added, based on existing debian/copyright file
-	* DESCRIPTION: Added Copyright: reference to new COPYRIGHTS file
 
 2013-12-04  Dirk Eddelbuettel  <edd@debian.org>
 
