--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-12-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: Updated Description to mention MPL-2 license for Eigen
+
+        * inst/unitTests/runit.solutions.R: RUnit file converted from testthat
+	* inst/unitTests/runit.transform.R: Idem
+	* inst/unitTests/runit.wrap.R: Idem
+	* DESCRIPTION: Remove Suggests: of testthat
+
 2013-12-18  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: New minor version 3.2.0.1
