--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+r-cran-rcppeigen (0.3.2.0.1-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Thu, 19 Dec 2013 19:35:07 -0600
+
 r-cran-rcppeigen (0.3.2.0-1) unstable; urgency=low
 
   * New upstream release
