--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2014-01-22  Dirk Eddelbuettel  <edd@debian.org>
+
+	* NAMESPACE: Proper importFrom(Rcpp, evalCpp) needed for next Rcpp
+
+2014-01-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/SHLIB.maker: Commented-out, file to be removed
+
 2013-12-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Updated Description to mention MPL-2 license for Eigen
