--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
+2014-01-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: New minor version 3.2.0.2
+
 2014-01-22  Dirk Eddelbuettel  <edd@debian.org>
 
-	* NAMESPACE: Proper importFrom(Rcpp, evalCpp) needed for next Rcpp
+	* NAMESPACE: Added importFrom(Rcpp, evalCpp) needed for next Rcpp
 
 2014-01-12  Dirk Eddelbuettel  <edd@debian.org>
 
