--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+r-cran-rcppeigen (0.3.2.0.2-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Sun, 26 Jan 2014 11:43:41 -0600
+
 r-cran-rcppeigen (0.3.2.0.1-1) unstable; urgency=low
 
   * New upstream release
