updated RcppEigen.package.skeleton() for R 3.1.0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2014-03-01  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/RcppEigen.package.skeleton.R: Updated for R 0.11.0
+
+	* inst/skeleton/Makevars: Updated for R 0.11.0, also noted C++11 option
+	via setting of 'USE_CXX1X=' with R 3.1.0 or later
+	* inst/skeleton/Makevars.win: Ditto
+
 2014-01-26  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: New minor version 3.2.0.2
