--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+r-cran-rcppeigen (0.3.2.1.0-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Mon, 03 Mar 2014 19:37:28 -0600
+
 r-cran-rcppeigen (0.3.2.0.3-1) unstable; urgency=low
 
   * New upstream release
