better ifdef test for DIRENT feature with thanks to Brian Ripley

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2014-03-05  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: New version 0.3.2.1.1
+	
+	* inst/include/unsupported/Eigen/src/SparseExtra/MatrixMarketIterator.h:
+	Better, more general test for DIRENT feature thanks to Brian Ripley
 
 2014-03-04  Dirk Eddelbuettel  <edd@debian.org>
 
