--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,9 @@ r-cran-rcppeigen (0.3.2.1.1-1) unstable; urgency=low
 
   * New upstream release
 
- -- Dirk Eddelbuettel <edd@debian.org>  Thu, 06 Mar 2014 19:28:42 -0600
+  * debian/control: Set Build-Depends: to current R version 
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Sat, 08 Mar 2014 08:10:32 -0600
 
 r-cran-rcppeigen (0.3.2.1.0-1) unstable; urgency=low
 
