--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2014-08-21  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: New version 0.3.2.2.0 which was prepared expertly by
+	Yixuan Qiu in a nice and clean pull request -- a big thank you for that!
+
+	* DESCRIPTION: Adjusting Date: as well
+
 2014-08-19  Yixuan Qiu  <yixuan.qiu@cos.name>
 
 	* inst/include/Eigen: Updated to release 3.2.2 of Eigen
