--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-11-23  Yixuan Qiu  <yixuan.qiu@cos.name>
+
+	* inst/unitTests/runit.wrap.R: Added a number of unit tests
+	* inst/unitTests/runit.transform.R: Idem
+	* inst/unitTests/runit.sparse.R: Idem
+
 2014-10-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/examples/lmBenchmark.R: Updated RcppArmadillo .Call in example
