updated for changes from PR #18

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2015-02-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/RcppEigen.package.skeleton.R: Use pkgKitten::kitten, if installed
+	* inst/skeleton/rcppeigen_hello_world.Rd: Added new page
+
+	* inst/skeleton/Makevars: Minor edits
+	* inst/skeleton/Makevars.win: Idem
+
+	* DESCRIPTION: Added Suggests: for pkgKitten
+	* .travis.yml: Also install pkgKitten
+
 2014-12-22  Yixuan Qiu  <yixuan.qiu@cos.name>
 
 	* inst/include/Eigen: Updated to release 3.2.3 of Eigen
