--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-02-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: Version 0.3.2.4.0
+
+	* debian/*: Updated
+
 2015-02-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/Eigen: Updated to release 3.2.4 of Eigen
