--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,20 @@
+r-cran-rcppeigen (0.3.2.4.0-1) unstable; urgency=low
+
+  * New upstream release
+  
+  * debian/control: Add r-cran-pkgkitten to (Build-)Depends
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Thu, 26 Feb 2015 14:12:35 -0600
+
+r-cran-rcppeigen (0.3.2.3.0-1) unstable; urgency=low
+
+  * New upstream release
+  
+  * debian/control: Set Build-Depends: to current R version 
+  * debian/control: Set Standards-Version: to current version 
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Tue, 23 Dec 2014 14:46:16 -0600
+
 r-cran-rcppeigen (0.3.2.2.0-1) unstable; urgency=low
 
   * New upstream release
