--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 	* NAMESPACE: Explicitly importFrom() stats and utils packages
 
+	* inst/include/Eigen/src/Core/Assign.h: Make change made solely for
+	OpenMx more explicit; intent is to not do this time
+
 2015-07-11  Yixuan Qiu  <yixuan.qiu@cos.name>
 
 	* inst/include/Eigen: Updated to release 3.2.5 of Eigen
