--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2015-07-12  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION: Version 0.3.2.5.0
+
+	* DESCRIPTION: Added more explicitly quoting per R CMD check
+
 	* NAMESPACE: Explicitly importFrom() stats and utils packages
 
 	* inst/include/Eigen/src/Core/Assign.h: Make change made solely for
