--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-07-13  Yixuan Qiu  <yixuan.qiu@cos.name>
+
+	* inst/include/Eigen/src/Core/Assign.h: Applied patch from upstream Eigen
+	that will appear in the next release
+
+
 2015-07-12  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Version 0.3.2.5.0
@@ -15,6 +21,7 @@
 	* inst/include/unsupported: Idem
 	* DESCRIPTION: Idem
 	* README.md: Idem
+
 	* inst/include/RcppEigenWrap.h: Fixed three incorrect error messages
 
 2015-06-06  Dirk Eddelbuettel  <edd@debian.org>
