--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-09-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: Release 0.3.2.5.1
+
+        * debian/*: Changes for Debian release of 0.3.2.5.1
+
 2015-09-21  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/Eigen/src/SparseCore/CompressedStorage.h: Added
