--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2016-01-20  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION: Release 0.3.2.7.0
+
+	* debian/*: Changes for Debian release of 0.3.2.7.0
+
+2016-01-19  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/unitTests/runit.sparse.R (test.sparseCholesky.R): Accomodate
+	stricter as.vector() requirements in R-devel
+
 2016-01-18  Yixuan Qiu  <yixuan.qiu@cos.name>
 
 	* inst/include/Eigen: Updated to release 3.2.7 of Eigen
@@ -39,8 +50,8 @@
 
 2015-07-13  Yixuan Qiu  <yixuan.qiu@cos.name>
 
-	* inst/include/Eigen/src/Core/Assign.h: Applied patch from upstream Eigen
-	that will appear in the next release
+	* inst/include/Eigen/src/Core/Assign.h: Applied patch from upstream
+	Eigen that will appear in the next release
 
 2015-07-12  Dirk Eddelbuettel  <edd@debian.org>
 
