--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+r-cran-rcppeigen (0.3.2.7.0-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Tue, 19 Jan 2016 20:35:19 -0600
+
 r-cran-rcppeigen (0.3.2.5.1-1) unstable; urgency=low
 
   * New upstream release
