--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-02-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version): Release 0.3.2.8.1
+	* inst/NEWS.Rd: Release 0.3.2.8.1
+	* debian/*: Changes for Debian release of 0.3.2.8.1
+
 2016-02-28  Yixuan Qiu  <yixuan.qiu@cos.name>
 
 	* inst/include/Eigen/src/SparseCore/CompressedStorage.h,
