--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+r-cran-rcppeigen (0.3.2.8.1-1) unstable; urgency=medium
+
+  * New upstream release
+
+ -- Dirk Eddelbuettel <edd@debian.org>  Mon, 29 Feb 2016 19:38:13 -0600
+
 r-cran-rcppeigen (0.3.2.8.0-1) unstable; urgency=medium
 
   * New upstream release
