--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-04-28  James Joseph Balamuta <balamut2@illinois.edu>
+
+	* inst/include/RcppEigenWrap.h: Added an exporter class for RowVectorXd per 
+	http://stackoverflow.com/questions/36920689/rowvectorxd-not-supported-in-rcppeigen
+	* inst/include/unitTests/runit.RcppEigen.R: Added row exporter unit test.
+
 2016-02-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version): Release 0.3.2.8.1
