--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2016-04-28  James Joseph Balamuta <balamut2@illinois.edu>
 
-	* inst/include/RcppEigenWrap.h: Added an exporter class for RowVectorXd per 
+	* inst/include/RcppEigenWrap.h: Added an exporter class for Map::RowVectorX<t> per 
 	http://stackoverflow.com/questions/36920689/rowvectorxd-not-supported-in-rcppeigen
 	* inst/include/unitTests/runit.RcppEigen.R: Added row exporter unit test.
 
