--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-04-30  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Expanded
+
 2016-04-28  James Joseph Balamuta <balamut2@illinois.edu>
 
 	* inst/include/RcppEigenWrap.h: Added an exporter class for Map::RowVectorX<t> per 
