--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2016-11-12  Yixuan Qiu  <yixuan.qiu@cos.name>
+
+    * inst/include/Eigen: Updated to release 3.3.0 of Eigen
+    * inst/include/unsupported: Idem
+    * DESCRIPTION: Idem
+    * README.md: Idem
+
+    * inst/include/RcppEigenForward.h, inst/include/RcppEigenWrap.h:
+    Added exporters for the new Map<SparseMatrix<T> > type
+    * inst/unitTests/runit.sparse.R: Unit tests for the new type
+
 2016-08-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Release 0.3.2.9.0 with big thanks to Yixuan for doing
