--- a/ChangeLog
+++ b/ChangeLog
@@ -6,8 +6,8 @@
     * README.md: Idem
 
     * inst/unitTests/runit.RcppEigen.R, inst/unitTests/runit.sparse.R:
-    Explicitly convert matrix size to `int` type such that Rcpp can properly
-    return the value to R, thanks to ChingChuan Chen
+    Explicitly convert matrix size to `double` type such that Rcpp can properly
+    return the value to R, thanks to ChingChuan and Dirk
 
 2017-01-20  ChingChuan Chen  <zw12356@gmail.com>
 
