--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2017-08-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml (before_install): Use https for curl fetch
+
 2017-06-06  Yu Gong  <armgong@yahoo.com>
 
 	* inst/include/unsupported/Eigen/src/SparseExtra/MatrixMarketIterator.h:
