--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2018-02-05  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Version, Date): Release 0.3.3.4.0
+
 	* inst/include/Eigen/src/Core/arch/CUDA/Half.h (Eigen): Condition use
 	of long long and unsigned long on C++11
 
