--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 2018-05-30  Michael Weylandt  <michael.weylandt@gmail.com>
 
-	* inst/examples/lmBenchmark.R: Update call to RcppArmadillo's version
-	of fastLm in benchmark script
+	* inst/examples/lmBenchmark.R: Update benchmark script to use
+	microbenchmark and to use exposed fastLm functions from Rcpp
+	packages rather than invoking .Call directly
 
 2018-05-25  Ralf Stubner  <ralf.stubner@daqana.com>
 
