--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2018-09-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Switch Travis CI to R 3.5 repo
+
 2018-05-30  Michael Weylandt  <michael.weylandt@gmail.com>
 
 	* inst/examples/lmBenchmark.R: Update benchmark script to use
