--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2018-11-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.3.3.5.0
+
+2018-11-23  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/Eigen: Updated to release 3.3.5
+	* inst/include/unsupported: Idem
+	* patches/eigen-3.3.5.diff: Diff of local patches
+
 2018-09-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .travis.yml: Switch Travis CI to R 3.5 repo
