--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-02-16  James Joseph Balamuta <balamut2@illinois.edu>
+
+	* R/runit.RcppEigen.R: Removed listing RcppEigen in Imports during
+	skeleton package creation.
+
 2018-11-24  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.3.3.5.0
