--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-03-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/skeleton/rcppeigen_hello_world.cpp: Rework first example to
+	not rely on Eigen RNG which R CMD check would complain about.
+
 2019-02-16  James Joseph Balamuta <balamut2@illinois.edu>
 
 	* R/runit.RcppEigen.R: Removed listing RcppEigen in Imports during
