--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2019-05-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* vignettes/RcppEigen-Introduction.Rnw: Update vignette to use
+	RcppEigen:::eigen_version() instead of .Call()
+
 2019-03-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/skeleton/rcppeigen_hello_world.cpp: Rework first example to
