--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2019-10-13  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Version, Date): Roll minor version
+
 	* R/RcppEigen.package.skeleton.R (RcppEigen.package.skeleton): Move
 	test for example_code outside of haveKitten test
 
