--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@
 
 	* DESCRIPTION (Version, Date): Roll minor version
 
-	* R/RcppEigen.package.skeleton.R (RcppEigen.package.skeleton): Move
-	test for example_code outside of haveKitten test
+	* R/RcppEigen.package.skeleton.R (RcppEigen.package.skeleton): Test for
+	example_code outside of haveKitten test; remove force argument if unused
 
 2019-05-24  Dirk Eddelbuettel  <edd@debian.org>
 
