--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2019-11-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.3.3.7.0
+
+	* inst/include/Eigen: Upgraded to Eigen 3.3.7
+	* inst/include/unsupported/Eigen: Idem
+	* patches/eigen-3.3.7.diff: Carried local CRAN patches forward
+
 2019-11-01  Dirk Eddelbuettel  <edd@debian.org>
 	
 	* R/unit.test.R (compile_unit_tests): Removed as no longer needed
