--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2020-12-05  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Version, Date): Release 0.3.3.9.0
+
 	* inst/include/Eigen: Upgraded to Eigen 3.3.9
 	* inst/include/unsupported/Eigen: Idem
 	* patches/eigen-3.3.9.diff: Carried local CRAN patches forward
