--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-01-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/RcppEigen.package.skeleton.R: Wrap any() around grepl()
+
 2020-12-25  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .github/workflows/ci.yaml: Small tweaks to CI YAML file
