--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-05-09  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (URL): Add GitHub repo to URL field
+
 2021-01-02  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/RcppEigen.package.skeleton.R: Wrap any() around grepl()
