--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2021-06-06  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml (jobs): Turn on coverage
+	* .covrignore: Added
+	* .codecov.yml (ignore): Idem
+
 2021-05-09  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (URL): Add GitHub repo to URL field
