--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2021-06-07  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/tinytest/test_misc.R: New test file
+	* inst/tinytest/test_fastLm.R: Added tests
+
+	* .Rbuildignore: Add .covignore and .codecov.yml
+
 2021-06-06  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Added coverage badge
