--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
 2021-06-07  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Date, Version): Roll minor version
+
 	* inst/tinytest/test_misc.R: New test file
 	* inst/tinytest/test_fastLm.R: Added tests
+
+	* R/fastLm.R: Add single one-line nocov tag
 
 	* .Rbuildignore: Add .covignore and .codecov.yml
 
