--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-07-18  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/tinytest/test_fastLm.R: Add tests for summary
+
 2021-07-17  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Date, Version): Roll minor version
