--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2021-10-26  Yixuan Qiu  <yixuan.qiu@cos.name>
+
+	* DESCRIPTION (Version, Date): Release 0.3.4.0.0
+
+	* inst/include/Eigen: Upgraded to Eigen 3.4.0
+	* inst/include/unsupported/Eigen: Idem
+	* patches/eigen-3.4.0.diff: Carried local CRAN patches forward
+	* patches/howToDiff.md: Idem
+
 2021-10-10  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/CITATION: Switch JSS url to doi form per JSS request
