--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-12-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* README.md: Add total downloads badge
+
 2021-12-08  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Remove unused continuous integration artifact and badge
