add versioned depends on R

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2022-04-08  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Depends): Add a versioned dependency on R 3.6.0 or
+	later because of our use of FCONE to support USE_FC_LEN_T
+
 2022-04-05  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): CRAN Release 0.3.3.9.2
