--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-09-15  Jonah Gabry  <jgabry@gmail.com>
+
+	* inst/skeleton/rcppeigen_hello_world.cpp: Correct typo
+
 2022-04-08  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Depends): Add a versioned dependency on R 3.6.0 or
