--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2022-11-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/fastLm.R (summary.fastLm,print.fastLm): Refer to correct and full
+	variable name df.residual in the returned object
+
 2022-09-15  Jonah Gabry  <jgabry@gmail.com>
 
 	* inst/skeleton/rcppeigen_hello_world.cpp: Correct typo
