--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2022-11-04  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Version, Date): CRAN Release 0.3.3.9.3
+	* inst/NEWS.Rd: Release 0.3.3.9.3
+
 	* src/init.c: Add 'void' for proper prototype pleasing clang-15
 
 	* R/fastLm.R (summary.fastLm,print.fastLm): Refer to correct and full
