--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-02-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/CITATION: Convert to bibentry() style with person()
+
 2022-11-04  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): CRAN Release 0.3.3.9.3
