--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2023-03-10  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/RcppEigen.package.skeleton.R: No longer set Imports: RcppEigen in
+	DESCRIPTION and NAMESPACE
+
 2023-02-12  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/CITATION: Convert to bibentry() style with person()
