--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2023-03-10  Dirk Eddelbuettel  <edd@debian.org>
 
+	* DESCRIPTION (Date, Version): Roll minor version
+
 	* R/RcppEigen.package.skeleton.R: No longer set Imports: RcppEigen in
 	DESCRIPTION and NAMESPACE
 
